nenolod     2005/11/25 20:08:47 UTC	(20051125-3973)
  Log:
  UnrealIRCd ban-burst fix.

  Changes:	Modified:
  +4 -1		trunk/protocol/unreal.c (File Modified) 


jilles      2005/11/24 00:01:42 UTC	(20051124-3965)
  Log:
  Don't delete me.me, this causes confusion later.
  This could happen if ircd sends SQUIT <our name>.
  

  Changes:	Modified:
  +8 -0		trunk/src/node.c (File Modified) 


nenolod     2005/11/23 22:27:24 UTC	(20051123-3963)
  Log:
  Grammatical fix.

  Changes:	Modified:
  +4 -2		trunk/modules/chanserv/ban.c (File Modified) 


jilles      2005/11/22 11:41:52 UTC	(20051122-3959)
  Log:
  New tracker URL.
  

  Changes:	Modified:
  +1 -2		trunk/TODO (File Modified) 


nenolod     2005/11/21 03:51:46 UTC	(20051121-3957)
  Log:
  Regenerate configure.

  Changes:	Modified:
  +5 -2		trunk/configure (File Modified) 


nenolod     2005/11/21 03:51:24 UTC	(20051121-3955)
  Log:
  Improve MySQL detection.

  Changes:	Modified:
  +3 -0		trunk/configure.ac (File Modified) 


terminal    2005/11/20 05:10:01 UTC	(20051120-3951)
  Log:
  fix an oops where windows didn't get a .dll suffix

  Changes:	Modified:
  +2 -2		trunk/libatheme/linker.c (File Modified) 


terminal    2005/11/19 06:35:10 UTC	(20051119-3949)
  Log:
  remove tab from end of line, make doesn't like it.

  Changes:	Modified:
  +1 -1		trunk/modules/userserv/Makefile.win32 (File Modified) 


jilles      2005/11/17 17:38:40 UTC	(20051117-3947)
  Log:
  Store user IP addresses.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2005/11/17 17:17:28 UTC	(20051117-3945)
  Log:
  Fix server descriptions for remote servers.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2005/11/17 17:14:06 UTC	(20051117-3943)
  Log:
  - Use EOB and EOBACK commands (so we don't appear as bursting in
    /stats ? and to detect the uplink's end of burst)
  - Keep track of netwide EOB because we don't need to send anything
    for it
  
