@@ -4,7 +4,7 @@
  *
  * Generic protocol event handlers.
  *
- * $Id: phandler.c 3171 2005-10-23 21:55:39Z jilles $
+ * $Id: phandler.c 3979 2005-11-26 01:35:34Z jilles $
  */
 
 #include "atheme.h"
@@ -29,6 +29,7 @@ void (*ircd_on_login) (char *origin, char *user, char *wantedhost) = generic_on_
 void (*ircd_on_logout) (char *origin, char *user, char *wantedhost) = generic_on_logout;
 void (*jupe) (char *server, char *reason) = generic_jupe;
 void (*sethost_sts) (char *source, char *target, char *host) = generic_sethost_sts;
+void (*fnc_sts) (user_t *source, user_t *u, char *newnick, int type) = generic_fnc_sts;
 
 uint8_t generic_server_login(void)
 {
@@ -153,4 +154,10 @@ void generic_jupe(char *server, char *reason)
 void generic_sethost_sts(char *source, char *target, char *host)
 {
 	/* nothing to do here. */
+}
+
+void generic_fnc_sts(user_t *source, user_t *u, char *newnick, int type)
+{
+	if (type == FNC_FORCE)
+		skill(source->nick, u->nick, "Nickname enforcement (%s)", u->nick);
 }
